# hello_c.jl

./: .gitignore  CMakeLists.txt  README.md  build_gdal.ps1  run.ps1  run.sh
docs/: install_deps.sh  msys2-zsh.md
include/: leaf.c  leaf.h
julia/: hello.jl
src/: hello_gdal.c  hello_leaf.c  hello_opencv.cpp  hello_sdl2.cpp  leaf.c  main_leaf.c
